--- a/app/src/main/res/layout/activity_read_post.xml
+++ b/app/src/main/res/layout/activity_read_post.xml
@@ -6,6 +6,9 @@
     android:layout_height="wrap_content"
     tools:context="com.example.marko.projekat.ReadPostActivity">
 
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
