--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,4 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.marko.projekat.SettingsActivity">
 
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
 </android.support.constraint.ConstraintLayout>
